[package]
name = "stools"
version = "1.0.0"
edition = "2021"
authors = ["Juan Martinez Alonso <martinezalonsojn@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0" }
zip = { version = "0.6" }
